--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,30 @@
 #container a {
   text-decoration: none;
 }
+
+ion-title {
+  background-color: #cdd8f7;
+  font-size: xx-large;
+  color: #2d4483;
+  font-weight: bold;
+}
+
+ion-button {
+  background-color: #cdd8f7;
+  margin: 15px;
+  margin-right: 50px;
+  margin-left: 50px;
+}
+
+h1 {
+  background-color: #a0b7f5;
+  border-radius: 10px;
+  margin-right: 75px;
+  margin-left: 75px;
+  padding: 5px;
+}
+
+ion-toolbar {
+  color-scheme: #cdd8f7;
+}
+
